# NetworkComputing

./: .gitignore  .gitmodules  Dockerfile.client  Dockerfile.server  README.md  REPORT.md  docker-compose.yml  justfile  pyproject.toml
.obsidian/: workspace.json
BMC-old/: Dockerfile.ecn  Dockerfile.server  README.md  docker-compose.yml  justfile  memcached_stress.py
ecnshark-figure-20/: MQ_TCN_test_Flow_Monitor.xml  multiqueue-sim-res-ecnsharp.txt  plot-20-a.py  plot-20-b.py
ecnsharp-fig-13-14/: NetComp_Fig13_14.ipynb  data-f13_14.csv
ecnsharp-fig-16/: commands.md  plot-16-plot-a.py  plot-16-plot-b.py  plot-16-plot-c.py
ecnsharp-fig-17/: commands.md  plot_17.py  run_fct_sweep.sh
ecnsharp-fig-17/xml-results/: Queue_Track_CODEL_CODEL_25_Flow_Monitor.xml  Queue_Track_CODEL_CODEL_50_Flow_Monitor.xml  Queue_Track_CODEL_CODEL_75_Flow_Monitor.xml  Queue_Track_ECNSharp_ECNSharp_25_Flow_Monitor.xml  Queue_Track_ECNSharp_ECNSharp_50_Flow_Monitor.xml  Queue_Track_ECNSharp_ECNSharp_75_Flow_Monitor.xml  Queue_Track_RED_RED_25_Flow_Monitor.xml  Queue_Track_RED_RED_50_Flow_Monitor.xml  Queue_Track_RED_RED_75_Flow_Monitor.xml
ecnsharp-figure-20/: mq_ecnsharp_fct_parsed.txt  mq_tcn_fct_parsed.txt  multiqueue-sim-res-tcn.txt
fat-tree/: large-scale.cc  plot.py  slurm.sh
fat-tree/data/: baseline.csv  sharp.csv
fig2/: parser.py  slurm.sh
fig2/data/: fig2data.csv  fig2data2.csv  fig2data3.csv  fig2data4.csv  fig2data5.csv
figure13_14/: NetComp_Fig13_14.ipynb  data-f13_14.csv
