[project]
name = "networkcomputing"
version = "0.1.0"
description = "Network Computing Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.14.1",
    "jupyterlab>=4.5.8",
    "jupyterlab-lsp>=5.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymemcache>=4.0.0",
]
